# ipycanvas

./: .eslintignore  .gitignore  .npmignore  .prettierignore  .readthedocs.yaml  .travis.yml  .yarnrc.yml  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  batch.ipynb  dev-environment.yml  environment.yml  ipycanvas.json  package-lock.json  package.json  pyproject.toml  setup.cfg  setup.py  setupbase.py  tsconfig.json  webpack.config.js  webpack.lab.config.js
.github/workflows/: check-release.yml  main.yml  publish-release.yml  release.yml  rtd_preview.yml  update_galata_references.yml
.nblink/: environment.yml  nblink-lock.json
css/: ipycanvas.css
docs/: animation.ipynb  basic_usage.rst  build-environment.yml  clock.ipynb  conf.py  conways_game_of_life.ipynb  drag_and_drop_example.ipynb  drawing_images.rst  drawing_paths.rst  drawing_text.rst  environment.yml  events.rst  fractals_tree.ipynb  index.rst  installation.rst  ipycanvas.ipynb  jupyter-lite.json  jupyterlite_config.json  offscreen_canvas.ipynb  overrides.json  requirements.txt  retrieve_images.rst  rough_canvas.rst  transformations.rst
docs/source/: advanced.rst  animation.ipynb  animations.rst  api.rst  basic_usage.rst  canvas_state.rst  clear_canvas.rst  clock.ipynb  conf.py  conways_game_of_life.ipynb  create_canvas.rst  drag_and_drop_example.ipynb  drawing_images.rst  drawing_paths.rst  drawing_shapes.rst  drawing_text.rst  events.rst  fractals_tree.ipynb  index.rst  installation.rst  ipycanvas.ipynb  jupyterlite_config.json  optimizing_canvas.rst  retrieve_images.rst  rough_canvas.rst  style_color.rst  styles_and_colors.rst  transformations.rst  usage.rst
docs/source/_static/: custom.css  goatcounter.js
examples/: 01.index.ipynb  02.polygon.ipynb  03.gradients.ipynb  04.patterns.ipynb  09.interaction_during_animation.ipynb  11.drag_and_drop_example.ipynb  14.conways_game_of_life.ipynb  17.plotting.ipynb  18.plot3d.ipynb  22.fractals_forest.ipynb  3d_monkey.ipynb  Gradients.ipynb  Interaction during animation.ipynb  MultiCanvas.ipynb  Patterns.ipynb  RoughCanvas.ipynb  animation.ipynb  batch_drawing.ipynb  binary_image.ipynb  clock.ipynb  conways_game_of_life.ipynb  drag_and_drop_example.ipynb  fractals_forest.ipynb  fractals_tree.ipynb  hand_drawing.ipynb  introduction.ipynb  lines.ipynb  mapping.ipynb  numpy_heatmap.ipynb  offscreen_canvas.ipynb  particle_system.ipynb  perlin_noise.ipynb  plot3d.ipynb  plotting.ipynb  polygon.ipynb  sketchy.ipynb  sprites.ipynb  wave.ipynb
examples/game_of_life/: __init__.py  game_of_life.py
examples/py3d_engine/: __init__.py  py3d_engine.py
ipycanvas/: __init__.py  _frontend.py  _version.py  animation.py  binary.py  call_repeated.py  canvas.py  compat.py  kiva.py  offscreen.py  py2js.py  utils.py
ipycanvas/nbextension/: __init__.py
ipycanvas/nbextension/static/: extension.js
ipycanvas/offscreen_canvas/: __init__.py  offscreen_canvas.py  offscreen_canvas_core.py
ipycanvas/offscreen_canvas/js/: extend_context_2d.js  init.js
scripts/: write_version.py
src/: canvas.css  extension.ts  index.ts  offscreen.ts  plugin.ts  utils.ts  version.ts  widget.ts
tests/: test_animations.py  test_py2js.py
ui-tests/: jupyter_server_config.py  package.json  playwright.config.js
ui-tests/tests/: ipycanvas.test.ts
ui-tests/tests/notebooks/: ipycanvas.ipynb  multicanvas_update.ipynb
