[build-system]
requires = [
    "hatch",
    "hatchling",
    "hatch-nodejs-version",
    "hatch-build-scripts",
    "jupyterlab>=3,<5",
]
build-backend = "hatchling.build"

[project]
name = "ipycanvas"
description = "Interactive widgets library exposing the browser's Canvas API"
readme = "README.md"
authors = [
    { name = "Martin Renou", email = "martin.renou@gmail.com" },
]
keywords = [
    "IPython",
    "Jupyter",
    "Widgets",
    "Canvas",
]
classifiers = [
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ipywidgets>=7.6.0,<9",
    "numpy",
    "pillow>=6.0",
]
dynamic = [
    "version",
]

[project.license]
file = "LICENSE.txt"

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/jupyter-widgets-contrib/ipycanvas"

[tool.hatch.version]
source = "nodejs"

[tool.hatch.build]
artifacts = [
    "ipycanvas/nbextension/static/index.*",
    "ipycanvas/labextension",
    "ipycanvas/_version.py",
]

[tool.hatch.build.targets.wheel.shared-data]
"ipycanvas/nbextension/static" = "share/jupyter/nbextensions/ipycanvas"
"ipycanvas/labextension" = "share/jupyter/labextensions/ipycanvas"
"ipycanvas.json" = "etc/jupyter/nbconfig/notebook.d/ipycanvas.json"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "ipycanvas/_version.py",
]

[tool.hatch.build.hooks.jupyter-builder]
ensured-targets = [
    "ipycanvas/offscreen_canvas/js/init.js",
    "ipycanvas/nbextension/static/index.js",
    "ipycanvas/labextension/package.json",
]
dependencies = [
    "hatch-jupyter-builder>=0.8.1",
]
build-function = "hatch_jupyter_builder.npm_builder"

[[tool.hatch.build.hooks.build-scripts.scripts]]
work_dir = "."
commands = ['python scripts/write_version.py']
# _version.py is already mentioned in top-level build artifact
artifacts = []

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
path = "."
build_cmd = "build:extensions"
npm = [
    "yarn",
]

[tool.check-wheel-contents]
ignore = ["W002"]
