[metadata]
name = ipycanvas
description = "Interactive widgets library exposing the browser's Canvas API"
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause License
license_file = LICENSE.txt
author = Martin Renou
author_email = martin.renou@gmail.com
url = https://github.com/martinRenou/ipycanvas
keywords = ipython, jupyter, widgets, graphics, canvas

[options]
packages = find:
install_requires =
    ipywidgets>=7.6.0
    pillow>=6.0
    numpy
    orjson
classifiers =
    Framework :: Jupyter
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    License :: OSI Approved :: BSD License,
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

python_requires = >=3.5
include_package_data = True

[bdist_wheel]
universal=1
